<resources>
    <string name="app_name">TravelDeals</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price (numbers only)</string>
    <string name="description_hint">Description</string>
    <string name="deal_image">Deal image</string>

    <string name="new_travel_deal">New Travel Deal</string>

    <string name="save_deal">Save</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
</resources>